--- a/localisation/britain_events_l_english.yml
+++ b/localisation/britain_events_l_english.yml
@@ -1,102 +1,102 @@
 ﻿l_english:
- britain.1000.t:0 "Treaty with Japan"
- britain.1000.d:0 "British officials has approached us with a proposition of treaty. They want to profit with our Asian Expansion. In return, they will not intervene in our war with China and provide cooperation in naval research."
- britain.1000.a:0 "Accept the Treaty"
- britain.1000.b:0 "No Treaty!"
- britain.1001.t:0 "Japan Accepts"
- britain.1001.d:0 "Japan has accepted our proposition, we can now expand our colonies in East Asia and also our navy with joint Japanese research."
- britain.1001.a:0 "Great!"
- britain.1002.t:0 "Japan Rejects"
- britain.1002.d:0 "Japan has declined our offer. It can only mean they are preparing an attack on our colonies in East Asia..."
- britain.1002.a:0 "We must prepare for a war!"
- britain.1003.t:0 "Chinese Ultimatum"
- britain.1003.d:0 "The English have sent us an ultimatum; to cede province of Guangzhou and province of Guangdong. We cannot afford another war but we cannot also lose these provinces as they are very important centers. How should we act?"
- britain.1003.a:0 "We cannot afford another war."
- britain.1003.b:0 "We will not give our lands!"
- britain.1004.t:0 "China accepts the ultimatum."
- britain.1004.d:0 "Chinese officials have annouced their decision to cede the provinces of Guangzhou and Guangdong to the British Empire. It is indeed a historical day all thanks to the power of diplomacy."
- britain.1004.a:0 "Great news!"
- britain.1005.t:0 "China declines the ultimatum."
- britain.1005.d:0 "China will not cede their lands. They are losing war on all fronts, this war shouldnt be difficult. We must prepare of an offensive."
- britain.1005.a:0 "Bad news for China."
- britain.1006.t:0 "Anglo-German Treaty"
- britain.1006.d:0 "The English have approached us with a proposition of a treaty for mutual development of our armies. They offer us their naval experience and in return, they want us to offer them our tank researches."
- britain.1006.a:0 "Accept the Treaty!"
- britain.1006.b:0 "German technology is only for the Germans!"
- britain.1007.t:0 "Germany Accepts our Treaty"
- britain.1007.d:0 "Germans have accepted our proposition, toast to our mutual research and our future!"
- britain.1007.a:0 "Great!"
- britain.1008.t:0 "Germany Declines our Treaty"
- britain.1008.d:0 "Germans will not accept our proposition, they do not want to cooperate with us, we shall not rely on them."
- britain.1008.a:0 "We cannot trust Germans."
+ britain.1000.t:0 "일본과의 조약"
+ britain.1000.d:0 "영국 관료들은 우리에게 조약을 제안했습니다. 그들은 우리가 아시아에서 확장하는 것을 통해 이익을 얻기를 원합니다. 그 대가로 그들은 중국과의 전쟁에 개입하지 않고 해군 연구에 협력할 것입니다."
+ britain.1000.a:0 "조약을 수락하라."
+ britain.1000.b:0 "조약은 없다!"
+ britain.1001.t:0 "일본이 수락하다"
+ britain.1001.d:0 "일본은 우리의 제안을 받아들였고, 이제 동아시아의 식민지를 확장하고 일본과 공동으로 해군 연구를 진행할 수 있습니다."
+ britain.1001.a:0 "훌륭해!"
+ britain.1002.t:0 "일본이 거부하다"
+ britain.1002.d:0 "일본은 우리의 제의를 거절했습니다. 단지 그들이 동아시아에 있는 우리의 식민지에 대한 공격을 준비하고 있다는 것을 의미할 뿐입니다."
+ britain.1002.a:0 "전쟁을 준비해야 한다!"
+ britain.1003.t:0 "중국의 최후통첩"
+ britain.1003.d:0 "영국인들이 우리에게 최후통첩을 보냈습니다. 광저우와 광둥성을 양도하라는 것입니다. 우리는 또 다른 전쟁을 할 여유가 없지만 이 지역들은 매우 중요한 중심지이기 때문에 잃을 수도 없습니다. 어떻게 행동해야 합니까?"
+ britain.1003.a:0 "또 다른 전쟁을 감당할 수는 없다."
+ britain.1003.b:0 "우리 땅을 줄 수는 없다!"
+ britain.1004.t:0 "중국이 최후통첩을 받아들이다."
+ britain.1004.d:0 "중국 관료들은 광저우와 광둥성을 대영제국에 양도하기로 한 결정을 발표했습니다. 외교의 힘 덕분에 맞은 정말 역사적인 날입니다."
+ britain.1004.a:0 "훌륭한 소식이다!"
+ britain.1005.t:0 "중국이 최후통첩을 거부하다."
+ britain.1005.d:0 "중국은 그들의 땅을 양도하지 않을 것입니다. 그들은 모든 전선에서 전쟁에서 지고 있습니다. 이 전쟁은 어렵지 않을 것입니다. 우리는 공세에 대비해야 합니다."
+ britain.1005.a:0 "중국에겐 나쁜 소식이다."
+ britain.1006.t:0 "영국-독일 조약"
+ britain.1006.d:0 "영국인들은 우리 군대의 상호 발전을 위한 조약을 제안하며 접근해 왔습니다. 그들은 해군 경험을 제공하고 그 대가로 전차 연구를 제공받기를 원합니다."
+ britain.1006.a:0 "조약을 수락하라!"
+ britain.1006.b:0 "독일의 기술은 오로지 독일인들을 위한 것이다!"
+ britain.1007.t:0 "독일이 조약을 수락하다"
+ britain.1007.d:0 "독일이 우리의 제안을 받아들였습니다. 공동 연구와 미래를 위해 건배!"
+ britain.1007.a:0 "훌륭해!"
+ britain.1008.t:0 "독일이 조약을 거부하다"
+ britain.1008.d:0 "독일인들은 우리의 제안을 받아들이지 않을 것이며, 우리와 협력하기를 원하지 않을 것이며, 우리는 그들에게 의존하지 않을 것입니다."
+ britain.1008.a:0 "독일인들을 믿을 수 없다."
  britain.1010.t:0 "조지 5세의 서거"
- britain.1010.d:0 "영국 국왕이자 영국령 인도의 황제, 조지 5세가 세상을 떠났습니다. 그의 조용한 침착함과 신하들에 대한 헌신은 대전과 대공황을 통해 제국을 보았습니다. 그의 아들은 에드워드 8세로 즉위하게 될 것이지만, 이미 그의 생각이 너무 독립적이라는 것이라는 우려가 있습니다. 스탠리 볼드윈과 네빌 체임벌린은 총리와 내각의 지시를 받아들일 수 있도록 준비하고 있습니다."
+ britain.1010.d:0 "영국 국왕이자 영국령 인도의 황제, 조지 5세가 세상을 떠났습니다. 그의 조용한 침착함과 신하들에 대한 헌신은 세계 대전과 대공황 속에서도 제국을 지켰습니다. 그의 아들은 에드워드 8세로 즉위하게 될 것이지만, 이미 그의 사고방식이 너무 독립적이라는 것이라는 우려가 있습니다. 스탠리 볼드윈과 네빌 체임벌린은 총리와 내각의 지시를 받아들일 수 있도록 준비하고 있습니다."
  britain.1010.b:0 "삼가 고인의 명복을 빕니다."
  britain.1010.a:0 "삼가 고인의 명복을 빕니다."
  britain.1011.t:0 "에드워드 8세의 퇴위"
  britain.1011.d:0 "볼드윈 수상은 만약 에드워드 8세가 평민일뿐만 아니라 이혼녀이며, 미국인인 여자와 결혼한다면 품위가 손상될 것이라는 것을 분명히 했습니다. 그는 깊은 고민 끝에 의무보다 사랑을 선택했고 퇴위하는 것을 선택했습니다. 그의 동생 알버트는 조지 6세로서 왕으로 취임할 것입니다. 런던 마권업자들은 이미 이 수줍은 남자가 자신의 대관식에 갈 수 있을지에 대해 이의를 제기하고 있습니다."
  britain.1011.b:0 "조지 6세 국왕 폐하 만세!"
  britain.1011.a:0 "흥미롭군"
- britain.1013.t:0 "1936 Strike"
- britain.1013.d:0 "We thought that the great strike of 1926 was long forgotten but on its 10-year anniversary workers all around the Great Britain stand once more against the King and our conservative government.\nThey want peace, bread and rights for all men and women. We have 3 options;\nPromise them changes but do nothing in the hopes that strike will end soon enough. Our second option is to partially agree to their demands and sacrifice our production and industrial capacity. Lastly we can fully agree to their demands and reduce work-hours for all factory works. This however might spark more support for the left-wing government."
- britain.1013.a:0 "Promise them changes, do nothing"
- britain.1013.b:0 "Agree to some of their demands"
- britain.1013.c:0 "Fully agree to their demands"
- britain.1014.t:0 "Major strike continues"
- britain.1014.d:0 "Our decision to wait for strike's end has not paid off. The major workers strike continues. This will greatly affect our production and ability to compete agaisnt major powers."
- britain.1014.a:0 "Hopefully not for long"
- britain.1015.t:0 "People demand the King's abdication"
- britain.1015.d:0 "We hoped that by agreeing to workers' demands, we could save our economy but now we must think about saving our King!\nPeople demand the King's abdication! Workers are tired of His Majesty's inactivity and believe that he must go!"
- britain.1015.a:0 "This cannot happen!"
- britain.1015.b:0 "The King must go!"
- britain.1016.t:0 "The United Kingdom is in a state of Civil War!"
- britain.1016.d:0 "Under new Peoples' Government, we believed in peace and bread for everyone! It seems like there are still King's loyalists left within the Commonwealth. This fight is not yet over, we shall fight to our last man to preserve the ideals of Karl Marx!"
- britain.1016.a:0 "Workers of the World, Unite!"
- britain.1028.t:0 "Proposition for Edward VIII"
- britain.1028.d:0 "England is currently experiencing severe strikes and lack of unity among its people. We must reunite them again to become great again.\nSome members of the Parliament along with his Majesty Edward VIII have insisted on reinforcing the power of the monarch.\nThey believe that during this time, we could save England by uniting it under a firm hand of the Edward VII."
- britain.1028.a:0 "Seems like a reasonable idea"
- britain.1028.b:0 "This is non-sense"
- britain.1019.t:0 "Decolonization Process Begins"
- britain.1019.d:0 "After long discussion in the Parliament, we have finally decided to being the process of decolonization. This is a quest to achieve prosperity for the commonwealth which will take some time to complete."
- britain.1019.a:0 "Let's Go!"
- britain.1012.t:0 "Return of the Kingdom"
- britain.1012.d:0 "The United Kingdom was struck by series of strikes and conflicts. To preserve the integrity of the Kingdom, it was decided that the return of King as a real leader of the British Empire is essential.\nUnder King Edward's rule, the Commonwealth will be changed like never before, the Britain will rise again."
- britain.1012.a:0 "We'll see how that goes"
- britain.1012.b:0 "We'll see how that goes"
- britain.1020.t:0 "Independence for Canada!"
- britain.1020.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1020.a:0 "Great News!"
- britain.1022.t:0 "Independence for Australia"
- britain.1022.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1022.a:0 "Great News!"
- britain.1023.t:0 "Independence for New Zealand"
- britain.1023.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1023.a:0 "Great News!"
- britain.1021.t:0 "Independence for India"
- britain.1021.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1021.a:0 "Great News!"
- britain.1024.t:0 "Independence for South Africa!"
- britain.1024.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1024.a:0 "Great News!"
- britain.1025.t:0 "Independence for Egypt"
- britain.1025.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1025.a:0 "Great News!"
- britain.1026.t:0 "Independence for Malaya!"
- britain.1026.d:0 "Since the process of the decolonization has begun, we finally get to become independent, we shall prospere and develop to compete with the rest of the world!"
- britain.1026.a:0 "Great News!"
- britain.1027.t:0 "England begins to dismantle its Empire"
- britain.1027.d:0 "After long sessions in Parliament, the British government has finally decided the decolonization terms for the members of the Commonwealth. The British Empire is the largest empire that ever existed has finally come to its end.\nThe United Kingdom still will provide protection and investments for its former colonies such as India and Canada. They, on the other hand will remain loyal and provide assistance if necessary.\nWe will see how it develops..."
- britain.1027.a:0 "Interesting"
- britain.1027.b:0 "Interesting"
- britain.1018.t:0 "England Announces its Policies"
- britain.1018.d:0 "The newly formed governmnet of the British Isles is eager to show that it is a stable and progressive regime. The British will begin by sending diplomatic missions to other allied countries and then their former colonies.\nThey believe that left-wing regime is the key to the development and prosperity of what's left of the Commonwealth and the world."
- britain.1018.a:0 "OK"
- britian.1018.b:0 "OK"
- britain.1040.t:0 "The BEF"
- britain.1040.d:0 "It seems that once again, the nations of France, and a now united Germany under the Kaiser are at war. \nWe do however, have a dilemma. We can either send the British Expeditionary Force to France, to support their effort against the aggressors, but this operation would cost us valuable manpower and resources. Alternatively, we could hold back the BEF. This would of course delay any effort to support the French, but it would also allow us to more carefully plan our army elements, and conserve the manpower for the main British Army.\nHow should we proceed?"
- britain.1040.a:0 "Dispatch the BEF"
- britain.1040.b:0 "We need our men to protect the Homeland!"
- britain.1045.t:0 "The BEF"
- britain.1045.d:0 "It seems that once again, the nations of France, and a now united Germany, now under the rule of communists are at war. \nWe do however, have a dilemma. We can either send the British Expeditionary Force to France, to support their effort against the aggressors, but this operation would cost us valuable manpower and resources. Alternatively, we could hold back the BEF. This would of course delay any effort to support the French, but it would also allow us to more carefully plan our army elements, and conserve the manpower for the main British Army.\nHow should we proceed?"
- britain.1045.a:0 "Dispatch the BEF"
- britain.1045.b:0 "We need our men to protect the Homeland!"
+ britain.1013.t:0 "1936년 파업"
+ britain.1013.d:0 "우리는 1926년의 대파업이 오랫동안 잊혀졌다고 생각했지만, 대파업 10주년이 되는 날, 영국 전역의 노동자들은 다시 한번 국왕과 보수정부에 반대하며 들고 일어섰습니다.\n그들은 평화와 빵, 그리고 모든 남성과 여성을 위한 권리를 원합니다. 3가지 선택지가 있습니다;\n첫 번째는 그들에게 변화를 약속하되, 파업이 곧 끝나기를 바라며 아무것도 하지 않는 것입니다. 두 번째는 그들의 요구사항에 부분적으로 동의하고 우리의 생산과 산업 역량을 희생시키는 것입니다. 마지막 세번째는 그들의 요구에 전적으로 동의하여 모든 공장의 노동시간을 줄일 수 있습니다. 그러나 이 조치는 좌파 정부에 대한 더 많은 지지를 촉발할 수도 있습니다."
+ britain.1013.a:0 "변화를 약속하고, 아무것도 하지 마라."
+ britain.1013.b:0 "일부 요구사항을 받아들여라."
+ britain.1013.c:0 "모든 요구사항을 받아들여라."
+ britain.1014.t:0 "대파업이 지속되다"
+ britain.1014.d:0 "파업이 끝날 때까지 기다리기로 한 우리의 결정은 성과를 거두지 못했습니다. 노동자들의 대파업이 지속되고 있습니다. 이것은 우리의 생산과 주요 강대국들과 경쟁하는 능력에 큰 영향을 미칠 것입니다."
+ britain.1014.a:0 "오래 가지 않기를 바란다."
+ britain.1015.t:0 "사람들이 왕의 퇴위를 요구하다"
+ britain.1015.d:0 "우리는 노동자들의 요구에 동의함으로써, 우리의 경제를 살릴 수 있기를 바랬지만, 이제 우리는 우리의 왕을 구하는 것에 대해 생각해야 합니다!\n사람들은 왕의 퇴위를 요구합니다! 노동자들은 국왕의 비활동적인 행동에 싫증이 나서, 반드시 퇴위해야 한다고 믿고 있습니다!"
+ britain.1015.a:0 "이런 일은 있을 수 없다!"
+ britain.1015.b:0 "왕은 떠나야 한다!"
+ britain.1016.t:0 "영국에서 내전이 일어나다!"
+ britain.1016.d:0 "새로운 인민 정부 하에서, 우리는 모두를 위한 평화와 빵을 믿었습니다! 아직도 영연방 내에 킹 목사의 충신들이 남아 있는 것 같습니다. 이 싸움은 아직 끝나지 않았습니다. 우리는 카를 마르크스의 이상을 보존하기 위해 최후의 한 사람을 위해 싸울 것입니다!"
+ britain.1016.a:0 "만국의 노동자들이여, 단결하라!"
+ britain.1028.t:0 "에드워드 8세의 제안"
+ britain.1028.d:0 "영국은 현재 극심한 파업을 겪고 있으며 국민들은 단합되지 못했습니다. 우리는 그들을 다시 재결합시켜야 다시 위대해질 수 있습니다.\n일부 국회의원들은 에드워드 8세와 함께 군주의 권력을 강화해야 한다고 주장해왔습니다.\n그들은 이 기간 동안 영국을 에드워드 7세의 확고한 지배하에 단결시킴으로써 구할 수 있다고 믿고 있습니다."
+ britain.1028.a:0 "합리적인 제안인 것 같다."
+ britain.1028.b:0 "말이 되지 않는다."
+ britain.1019.t:0 "탈식민화 과정이 시작되다"
+ britain.1019.d:0 "의회에서의 오랜 논의 끝에 우리는 마침내 탈식민지화 과정을 밟기로 결정했습니다. 이 조치는 완성하는데 긴 시간이 들 영연방의 번영을 이루기 위한 탐구입니다."
+ britain.1019.a:0 "시작하자!"
+ britain.1012.t:0 "왕국의 귀환"
+ britain.1012.d:0 "영국은 일련의 파업과 갈등으로 타격을 받았습니다. 왕국을 온전하게 지키기 위해서는 대영제국의 진정한 지도자로서 왕의 복위가 필수적이라고 판단되었습니다.\n에드워드 왕의 통치하에, 영연방은 이전과는 다르게 바뀔 것이고, 영국은 다시 일어설 것입니다."
+ britain.1012.a:0 "어떻게 되나 보자."
+ britain.1012.b:0 "어떻게 되나 보자."
+ britain.1020.t:0 "캐나다의 독립!"
+ britain.1020.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1020.a:0 "훌륭한 소식이다!"
+ britain.1022.t:0 "오스트레일리아의 독립"
+ britain.1022.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1022.a:0 "훌륭한 소식이다!"
+ britain.1023.t:0 "뉴질랜드의 독립"
+ britain.1023.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1023.a:0 "훌륭한 소식이다!"
+ britain.1021.t:0 "인도의 독립"
+ britain.1021.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1021.a:0 "훌륭한 소식이다!"
+ britain.1024.t:0 "남아프리카의 독립!"
+ britain.1024.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1024.a:0 "훌륭한 소식이다!"
+ britain.1025.t:0 "이집트의 독립"
+ britain.1025.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1025.a:0 "훌륭한 소식이다!"
+ britain.1026.t:0 "말레이의 독립!"
+ britain.1026.d:0 "탈식민지화 과정이 시작되었으므로, 우리는 마침내 독립하게 될 것입니다, 우리는 번영하고 발전하여 세계의 다른 나라들과 경쟁할 것입니다!"
+ britain.1026.a:0 "훌륭한 소식이다!"
+ britain.1027.t:0 "영국이 스스로 제국을 해체하다"
+ britain.1027.d:0 "의회에서의 긴 회의 후에, 영국 정부는 마침내 영연방 국가들을 위한 탈식민지화 조건을 결정했습니다. 대영제국은 이제껏 존재했던 제국 중 가장 큰 제국입니다.\n영국은 여전히 인도와 캐나다와 같은 이전의 식민지에 대한 보호와 투자를 제공할 것입니다. 반면에, 이전 식민지는 영국에 대한 충성심을 유지하고 필요할 경우 도움을 제공할 것입니다.\n어떻게 전개되는지 지켜볼 것입니다.."
+ britain.1027.a:0 "흥미롭군."
+ britain.1027.b:0 "흥미롭군."
+ britain.1018.t:0 "영국이 정책을 발표하다"
+ britain.1018.d:0 "브리튼 제도의 새로 형성된 정부는 안정적이고 진보적인 정권이라는 것을 보여주기를 열망하고 있습니다. 영국은 다른 동맹국들과 이전 식민지에 외교 사절을 보내는 것으로 시작할 것입니다.\n그들은 좌파 정권이 영연방과 세계의 다른 나라들의 발전과 번영의 열쇠라고 믿고 있습니다."
+ britain.1018.a:0 "알았다."
+ britian.1018.b:0 "알았다."
+ britain.1040.t:0 "영국 대륙원정군(British Expeditionary Force (BEF))"
+ britain.1040.d:0 "다시 한 번, 프랑스국과 지금은 카이저 통치하에 통일을 이룬 독일이 전쟁 중인 것 같습니다. \n하지만 딜레마에 빠졌습니다. 우리는 침략자들에 대한 그들의 노력을 지원하기 위해 영국 원정군을 프랑스로 보낼 수도 있습니다. 하지만 이 작전으로 귀중한 인력과 자원이 희생될 것입니다. 그 대신에, 우리는 원정군을 보내지 않을 수 있습니다. 그렇게 한다면 당연히 프랑스군을 지원하기 위한 어떠한 노력도 지연될 것입니다. 하지만 그 조치로 또한 우리 군대의 요소들을 더 신중하게 계획하고 영국군 주력을 위한 인력을 보존할 수 있게 해줄 것입니다.\n어떻게 진행하면 좋겠습니까?"
+ britain.1040.a:0 "원정군을 파견하라."
+ britain.1040.b:0 "우리는 조국을 지키기 위해 병력이 필요하다!"
+ britain.1045.t:0 "영국 대륙원정군(British Expeditionary Force (BEF))"
+ britain.1045.d:0 "다시 한 번, 프랑스국과 지금은 카이저 통치하에 통일을 이룬 독일이 전쟁 중인 것 같습니다. \n하지만 딜레마에 빠졌습니다. 우리는 침략자들에 대한 그들의 노력을 지원하기 위해 영국 원정군을 프랑스로 보낼 수도 있습니다. 하지만 이 작전으로 귀중한 인력과 자원이 희생될 것입니다. 그 대신에, 우리는 원정군을 보내지 않을 수 있습니다. 그렇게 한다면 당연히 프랑스군을 지원하기 위한 어떠한 노력도 지연될 것입니다. 하지만 그 조치로 또한 우리 군대의 요소들을 더 신중하게 계획하고 영국군 주력을 위한 인력을 보존할 수 있게 해줄 것입니다.\n어떻게 진행하면 좋겠습니까?"
+ britain.1045.a:0 "원정군을 파견하라."
+ britain.1045.b:0 "우리는 조국을 지키기 위해 병력이 필요하다!"
