--- a/localisation/chi_ideas_l_english.yml
+++ b/localisation/chi_ideas_l_english.yml
@@ -32,11 +32,11 @@
  CHI_partisans:0 "비밀경찰"
  CHI_army:0 "신군부"
  CHI_new_labour:0 "신노동"
- french_advisors:0 "프랑스 고문"
- russian_advisors:0 "러시아 고문"
- german_advisors:0 "독일 고문"
- bavarian_advisors:0 "바이에른 고문"
- english_advisors:0 "영국 고문"
+ french_advisors:0 "프랑스 고문단"
+ russian_advisors:0 "러시아 고문단"
+ german_advisors:0 "독일 고문단"
+ bavarian_advisors:0 "바이에른 고문단"
+ english_advisors:0 "영국 고문단"
  CHI_edu_reform:0 "교육 개혁"
  CHI_weapon_payment_eng:0 "무기 지불금"
  CHI_weapon_payment:0 "무기 지불금"
