--- a/localisation/fra_focus_l_english.yml
+++ b/localisation/fra_focus_l_english.yml
@@ -104,7 +104,7 @@
  FR_commi:0 "프롤레타리아 혁명"
  FR_commi_desc:0 "우리나라를 안정시키기 위해 1870년대 파리 노동자들이 만들려고 했던 공동체를 설립하는 것만이 생각할 수 있는 유일한 해결책입니다. 프랑스 공화국을 무너뜨리고, 제2의 파리 코뮌으로 올라갑시다!"
  FR_support_BAV:0 "바이에른 재통일 지원"
- FR_support_BAV_desc:0 "이제 우리는 옛 독일 제국의 진정한 후계자인 바이에른과 우호적인 관계를 맺을 때가 되었습니다."
+ FR_support_BAV_desc:0 "이제 우리는 옛 독일 제국의 진정한 후신인 바이에른과 우호적인 관계를 맺을 때가 되었습니다."
  FR_help_BAV:0 "바이에른 지원"
  FR_help_BAV_desc:0 "남부 코뮌은 프로이센의 침략자들에 대항하여 단결하는 것을 돕기 위해 세계의 노동자들에게 도움을 요청했습니다! 영원한 적 프로이센을 물리치기 위해 그들을 도와야 합니다!"
  FR_help_USA:0 "리드의 정권 지원"
