--- a/localisation/grk_focus_l_english.yml
+++ b/localisation/grk_focus_l_english.yml
@@ -26,13 +26,13 @@
   GRK_autobahn:0 "아우토반 연결"
   GRK_autobahn_desc:0 "프로이센의 라이히스아우토반 계획은 독일 전역에 대규모 고속도로를 건설하기 위한 야심찬 계획입니다. 프로이센은 우리 나라로 진출하는 데 자금을 지원할 용의가 있습니다. 이 기회를 잡아야 합니다."
   GRK_ger_advisors:0 "프로이센 군사 고문"
-  GRK_ger_advisors_desc:0 "전 독일 정부는 유럽에서 가장 강력한 군대 중 하나를 가지고 있었습니다. 프로이센이 그들의 후계자이기 때문에, 그들은 우리의 군대를 향상시키고 확장하기에 완벽할 것입니다."
+  GRK_ger_advisors_desc:0 "전 독일 정부는 유럽에서 가장 강력한 군대 중 하나를 가지고 있었습니다. 프로이센이 그들의 후신이기 때문에, 그들은 우리의 군대를 향상시키고 확장하기에 완벽할 것입니다."
   GRK_zollverein:0 "졸버린 가입"
   GRK_zollverein_desc:0 "졸버린은 베를린 조약의 국가들 간의 경제 동맹입니다. 우리가 그들의 동맹에 합류할 준비가 되어 있지는 않지만, 졸바린에 합류하는 것은 올바른 방향으로 나아가는 단계입니다."
   GRK_join_berlin:0 "베를린 조약 가입"
   GRK_join_berlin_desc:0 "우리나라는 마침내 베를린 조약에 가입할 준비가 되었습니다. 마지막 단계는 회원 자격 신청입니다. 프러시아인들은 독일을 더 연결시킬 수 있는 이 기회를 거부한다면 절대적으로 멍청한 것입니다."
-  GRK_trade_BAV:0 "바이에른을 독일의 후계로 인식"
-  GRK_trade_BAV_desc:0 "바이에른이 전 독일 정부의 후계자인 것은 아주 명백합니다. 그들은 이웃에게 땅을 빼앗기지 않았고, 프로이센보다 훨씬 더 강력합니다. 우리는 그들과 함께해야 합니다."
+  GRK_trade_BAV:0 "바이에른을 독일의 후신으로 인식"
+  GRK_trade_BAV_desc:0 "바이에른이 전 독일 정부의 후신인 것은 아주 명백합니다. 그들은 이웃에게 땅을 빼앗기지 않았고, 프로이센보다 훨씬 더 강력합니다. 우리는 그들과 함께해야 합니다."
   GRK_bavarian_investors:0 "바이에른 산업 지원"
   GRK_bavarian_investors_desc:0 "우리 경제가 파리 증시 폭락의 영향에서 완전히 회복된 것은 아닙니다. 바이에른 원조를 받으면 이 상황은 쉽게 변할 수 있습니다."
   GRK_bavarian_advisors:0 "바이에른 군사 고문"
@@ -53,8 +53,8 @@
   GRK_befriend_ENG_desc:0 "영국인과 독일인은 꽤 많은 공통점을 가지고 있습니다. 하지만 중요한 것은 그들에게 독일인 왕이 있다는 것이고, 우리는 독일인이라는 것입니다. 결국 윈저 가문은 이전에는 하노버 가문이자 작센코부르크고타 가문이였습니다."
   GRK_english_advisors:0 "영국 군사 고문"
   GRK_english_advisors_desc:0 "세계 대전에서 대영제국은 우리를 이겼고, 그들은 논쟁의 여지가 없이 파도를 지배하고 있습니다. 그들의 군사 전술을 배우는 것이 우리의 가장 큰 이익입니다."
-  GRK_one_germany:0 "우리가 독일의 후계다"
-  GRK_one_germany_desc:0 "바이에른과 프로이센은 누가 독일의 진정한 후계자인가를 놓고 끊임없이 싸웁니다. 우리는 링에 우리의 모자를 던져야 합니다. 어떤 조치를 취해야 할 때입니다."
+  GRK_one_germany:0 "우리가 독일의 후신이다"
+  GRK_one_germany_desc:0 "바이에른과 프로이센은 누가 독일의 진정한 후신인가를 놓고 끊임없이 싸웁니다. 우리는 링에 우리의 모자를 던져야 합니다. 어떤 조치를 취해야 할 때입니다."
   GRK_towards_reunification:0 "뭉쳐야 산다..."
   GRK_towards_reunification_desc:0 "우리의 지배하에 독일을 통합하기 위해서는 옛 독일 제국의 영토를 요구할 필요가 있습니다. 우리는 독일을 다시 한번 단결시킬 것입니다."
   GRK_prepare_war:0 "흩어지면 죽는다..."
