--- a/localisation/japan_events_l_english.yml
+++ b/localisation/japan_events_l_english.yml
@@ -1,65 +1,65 @@
 ﻿l_english:
- japan.1000.t:0 "Integration of Korea"
- japan.1000.t_other:0 "Japan integrates Korea"
- japan.1000.d:0 "Our great Emperor Hirohito and his military staff anounced today that Korea would be integrated as a core territory into our Empire. A general ban on using the Korean language and practicing Korean culture is already actively being discussed by our parliament."
- japan.1000.d_other:0 "Today the Emperor of Japan anounced that that they wil now fully integrate Korea as a core state into their Empire. The only reason given to this annexation was that the state of Japan wants to better protect the Korean people from foreign invasion.This integration of Korea breaks the treaty with Russia where they demanded that the Koreans would be given autonomy under Japanese Rule. However, it seems like Petrograd is not going to intervene."
- japan.1000.a:0 "About time!" 
- japan.1000.b:0 "How much of a difference can this really make?"
- japan.1001.t:0 "East Heibei"
- japan.1001.d:0 "East Heibei is a Chinese state we have been using as a naval base for our ships. However, more and more rebels are rising up in this state and the cost of maintaining it grows higher. Should we give it to our puppet regime Manchukuo? This would increase the autonomy of our puppet but we won't have to deal with this issue anymore."
- japan.1001.a:0 "Manchukuan Heibei it is!"
- japan.1001.b:0 "Giving land to Chinese? Never!"
- japan.1002.t:0 "Second Sino-Japanese War"
- japan.1002.t_other:0 "Second Sino-Japanese War"
- japan.1002.d:0 "The day has finally come. China has been threatning us without end in the last years. It's time to shut those dogs' mouths and subject them. Today Japan will finally expand and archieve new victories for our Emperor."
- japan.1002.d_other:0 "This morning the state of Japan has officially declared war on the state of China..China has been calling other great powers for help but it seems like none of these states want to intervene at this time."
- japan.1002.a:0 "Onward to Victory!" 
- japan.1002.b:0 "A clash of titans..."
- japan.1003.t:0 "Japan delares war on the Western Coalition"
- japan.1003.t_other:0 "Japan delares war on the Western Coalition"
- japan.1003.d:0 "Because of the need for new resources and the desire of increasing our influence in Asia, the state of Japan declared war on the Wester Coalition. Our army has been waiting for this war for decades now. We have been planning to attack the lightly defended colonies of the Western Nations since the Great War. Now the time has come to seize the resources of those regions and to fulfill the destiny of Japan."
- japan.1003.d_other:0 "Today the State of Japan has made a suprise attack against the Western Nations in Asia. Japan sent no declaration of war to the allied nations and so they have been caught off-guard. It is unclear if the allied nations can hold their colonies in Asia against a major power which has their homelands much closer to the front."
- japan.1003.a:0 "Asia for the Asians!" 
- japan.1003.b:0 "The Japanese will scramble!"
- japan.1004.t:0 "Second Russo-Japanese War"
- japan.1004.t_other:0 "Second Russo-Japanese War"
- japan.1004.d:0 "The Russian east contains many resources,manpower and naval bases to use for our Empire. Our Military Staff finally decided to claim those territories for us. Many generals feared Russia for it's power it gained in the last decades. our Emperor however decided to declare war saying that Russia has no way to defend their land in the east."
- japan.1004.d_other:0 "The Second Russo-Japanese War has begun. This morning the Empire of Japan officially declared war on the Russian State. This is a surprising turn for Japanese expansion. Many believed Japan was freightened by Russia and aimed down south.History never goes like we expect it. "
- japan.1004.a:0 "The north is ours!" 
- japan.1004.b:0 "Poor buggers, fighting it out in the snow..."
- japan.1005.t:0 "Last Planning"
- japan.1005.d:0 "Our war plans are almost complete.Plans for invading China, Philipines, Indonesia, Malaysia and the islands of the pacific are finished. The training of our army and the reorganization has been going well. In the following war we will be mostly combating on the beaches and in the jungles. What should our primary focus in training be?"
- japan.1005.a:0 "Focus on amphibious landings"
- japan.1005.b:0 "Focus on mountainous terrain"
- japan.1006.t:0 "Fate of the Emporer"
- japan.1006.d:0 "The Monarchy has been ruling Japan for decades. The Emperor still means a lot to our people. Now that we are in command the fate of his highness is unclear. Should we let him live for the people or should we punish him for his crimes against humanity? "
- japan.1006.a:0 "Let him live"
- japan.1006.b:0 "Kill him!"
- japan.1007.t:0 "Japan becomes Democratic"
- japan.1007.t_other:0 "Japanese Democrats overthrow Hirohito!"
- japan.1007.d:0 "The unbelievable has happened. The Japanese Monarchy has been overthrown. Yesterday democratic supporters, including high ranking generals, politicians and a large mob of civilians stormed government and army buildings. The Imperial family was not expecting this and were captured by the rebels. After capturing the Emperor and threatening him with his life, he told the armies of Japan to lay down their arms before the conflict escalated into a civil war. This is the most suprising event of this decade. Japan is now a Democracy."
- japan.1007.d_other:0 "The unbelievable has happened. The Japanese Monarchy has been overthrown. Yesterday democratic supporters, including high ranking generals, politicians and a large mob of civilians stormed government and army buildings. The Imperial family was not expecting this and were captured by the rebels. After capturing the Emperor and threatening him with his life, he told the armies of Japan to lay down their arms before the conflict escalated into a civil war. This is the most suprising event of this decade. Japan is now a Democracy."
- japan.1007.a:0 "A new destiny" 
- japan.1007.b:0 "This is unexpected"
- japan.1008.t:0 "Japan offers us a alliance"
- japan.1008.d:0 "Officials of the newly democratic Japan approached us this morning and proposed an alliance to further mutual interests in Asia."
- japan.1008.a:0 "Peace in Asia!"
- japan.1008.b:0 "Alliance with the Devil?"
- japan.1009.t:0 "Japan demands our colony Indochina"
- japan.1009.d:0 "The state of Japan demanded our colony of Indochina. How shall we respond?."
- japan.1009.a:0 "Peace for all cost!"
- japan.1009.b:0 "Never!"
- japan.1010.t:0 "China accepts our alliance"
- japan.1010.d:0 "Together we shall protect peace."
- japan.1010.a:0 "Great"
- japan.1011.t:0 "China declines"
- japan.1011.d:0 "The Chinese Government declined our offer for an alliance."
- japan.1011.a:0 "A pity"
- japan.1012.t:0 "France folds"
- japan.1012.d:0 "France has folded to our demand. We are now in possesion of the Indochinese lands."
- japan.1012.a:0 "Sweet Victory"
- japan.1013.t:0 "France Declines"
- japan.1013.d:0 "France rejected our demand of giving up their colony freely. We should hold our promise and declare war."
- japan.1013.a:0 "Then it shall be war"
+ japan.1000.t:0 "한국 통합"
+ japan.1000.t_other:0 "일본이 한국을 통합하다"
+ japan.1000.d:0 "우리의 위대하신 히로히토 천황과 그의 군인들은 오늘 한국이 우리 제국의 핵심 영토로 통합될 것이라고 예고했습니다. 한국어 사용과 한국 문화 실천에 대한 전반적인 금지는 이미 우리 국회에서 활발하게 논의되고 있습니다."
+ japan.1000.d_other:0 "오늘 일본 천황은 그들이 이제 한국을 일본 제국의 핵심 주로써 완전히 통합할 것이라고 발표했습니다. 합병의 유일한 이유는 일본 정부가 외세의 침략으로부터 한국인들을 더 잘 보호하기를 원했기 때문입니다. 이러한 한국의 통합은 한국인에게 일본 통치하에서 자치권을 부여할 것을 요구한 러시아와의 조약을 파기한 것입니다. 하지만 페트로그라드는 개입하지 않을 것으로 보입니다."
+ japan.1000.a:0 "드디어!" 
+ japan.1000.b:0 "차이가 있긴 한건가?"
+ japan.1001.t:0 "동허베이"
+ japan.1001.d:0 "동허베이는 우리 함대의 해군기지로 사용해 온 중국 지역입니다. 하지만, 점점 더 많은 반군이 이 주에서 일어나고 있고 지역을 유지하는 비용은 더 높아집니다. 우리 괴뢰 정권인 만주국에 줘야 합니까? 이것은 괴뢰국의 자율성을 증가시키겠지만 우리는 더 이상 이 문제를 다룰 필요가 없을 것입니다."
+ japan.1001.a:0 "허베이는 만주국 땅이다!"
+ japan.1001.b:0 "중국인들에게 땅을 주라고? 절대 안 돼!"
+ japan.1002.t:0 "제2차 중일 전쟁"
+ japan.1002.t_other:0 "제2차 중일 전쟁"
+ japan.1002.d:0 "드디어 그날이 왔습니다. 중국은 지난 몇 년간 우리를 끝도 없이 위협해 왔습니다. 이제 그 개놈들의 입을 다물게 하고 지배하에 둘 때입니다. 오늘 일본은 마침내 확장할 것이고, 천황 폐하께 새로운 승리를 안겨드릴 것입니다."
+ japan.1002.d_other:0 "오늘 아침 일본 정부는 공식적으로 중국에 전쟁을 선포했습니다. 중국은 다른 강대국들에게 도움을 요청해왔지만, 현재로서는 어느 국가도 개입하고 싶어하지 않는 것 같습니다."
+ japan.1002.a:0 "승리를 향하여!" 
+ japan.1002.b:0 "거인들의 충돌이다..."
+ japan.1003.t:0 "일본이 서부 연합에 전쟁을 선포하다"
+ japan.1003.t_other:0 "일본이 서부 연합에 전쟁을 선포하다"
+ japan.1003.d:0 "새로운 자원의 필요성과 아시아에서의 영향력을 증대시키고자 하는 열망 때문에, 일본 정부는 서부 연합에 전쟁을 선포했습니다. 우리 군대는 수십 년 전부터 이 전쟁을 기다려 왔습니다. 우리는 대전 이래로 서방의 방어가 가벼운 식민지를 공격할 계획을 세우고 있습니다. 이제 그 지역의 자원을 빼앗고 일본의 운명을 성취할 때가 왔습니다."
+ japan.1003.d_other:0 "오늘 일본 정부는 서방의 아시아 국가들을 상대로 기습 공격을 단행했습니다. 일본은 연합국에게 선전포고를 하지 않았고 그래서 그들은 방심하고 있었습니다. 연합국이 그들의 본토에 비해 최전방에 훨씬 더 가까운 강대국에 대항하여 아시아에 식민지를 유지할 수 있을지는 불확실합니다."
+ japan.1003.a:0 "아시아는 아시아인들의 것이다!" 
+ japan.1003.b:0 "일본은 박살날 것이다!"
+ japan.1004.t:0 "제2차 러일 전쟁"
+ japan.1004.t_other:0 "제2차 러일 전쟁"
+ japan.1004.d:0 "러시아 동부에는 우리 제국을 위해 사용할 많은 자원, 인력, 해군기지가 있습니다. 우리 군대는 마침내 그 지역을 차지하기로 결정했습니다. 많은 장군들은 러시아가 지난 수십 년 동안 얻은 세력 때문에 러시아를 두려워했습니다. 그러나 우리 천황 폐하께서는 러시아는 동부 지역을 지킬 방법이 없다며 전쟁을 선포하기로 결정하셨습니다."
+ japan.1004.d_other:0 "제2차 러일 전쟁이 시작됐습니다. 오늘 아침 일본 제국은 공식적으로 러시아에 전쟁을 선포했습니다. 이것은 일본 확장의 기습적인 선회입니다. 많은 사람들은 일본이 러시아에 두려움을 느끼고 남하를 목표로 한다고 믿었습니다. 역사는 결코 우리가 기대했던 대로 흐르지 않습니다."
+ japan.1004.a:0 "북쪽은 우리 것이다!" 
+ japan.1004.b:0 "불쌍한 녀석들, 눈 속에서 싸우는군..."
+ japan.1005.t:0 "마지막 계획"
+ japan.1005.d:0 "우리의 전쟁 계획은 거의 완성되었습니다. 중국, 필리핀, 인도네시아, 말레이시아, 태평양의 섬들에 대한 침공 계획이 끝났습니다. 우리 군의 훈련과 조직 개편은 잘 진행되고 있습니다. 다음 전쟁에서는 대부분 해변과 정글에서 싸울 것입니다. 교육에 있어 주된 초점은 무엇이어야 합니까?"
+ japan.1005.a:0 "해병대 상륙에 집중하라."
+ japan.1005.b:0 "산악 지형에 집중하라."
+ japan.1006.t:0 "천황의 운명"
+ japan.1006.d:0 "일본은 수십 년 동안 군주제로 통치되어 왔습니다. 천황은 여전히 우리 민족에게 큰 의미가 있습니다. 이제 우리가 지휘권을 쥐고 있고 그의 운명은 분명하지 않습니다. 국민을 위해 살게 해야 할까요, 아니면 반인륜적 범죄로 처벌해야 할까요?"
+ japan.1006.a:0 "그를 살려둬라."
+ japan.1006.b:0 "그를 죽여라!"
+ japan.1007.t:0 "일본이 민주화되다"
+ japan.1007.t_other:0 "일본의 민주주의자들이 히로히토를 타도하다!"
+ japan.1007.d:0 "믿을 수 없는 일이 일어났습니다. 일본 군주정이 전복되었습니다. 어제 고위 장성, 정치인, 대규모 민간인을 포함한 민주주의 지지자들은 정부와 군사시설을 습격했습니다. 황실은 이 사실을 예상하지 못하고 반란군에게 붙잡혔습니다. 사로잡힌 천황은 목숨을 위협받아, 일본 군대에게 내전으로 확대되기 전에 무기를 내려놓으라고 말했습니다. 이것은 지난 10년 동안 가장 놀라운 사건입니다. 일본은 이제 민주주의 국가입니다."
+ japan.1007.d_other:0 "믿을 수 없는 일이 일어났습니다. 일본 군주정이 전복되었습니다. 어제 고위 장성, 정치인, 대규모 민간인을 포함한 민주주의 지지자들은 정부와 군사시설을 습격했습니다. 황실은 이 사실을 예상하지 못하고 반란군에게 붙잡혔습니다. 사로잡힌 천황은 목숨을 위협받아, 일본 군대에게 내전으로 확대되기 전에 무기를 내려놓으라고 말했습니다. 이것은 지난 10년 동안 가장 놀라운 사건입니다. 일본은 이제 민주주의 국가입니다."
+ japan.1007.a:0 "새로운 운명이다."
+ japan.1007.b:0 "예상치 못했다."
+ japan.1008.t:0 "일본이 동맹을 제의하다"
+ japan.1008.d:0 "민주화된 새 일본의 관료들은 오늘 아침 우리에게 접근하여 아시아에서의 상호 이익을 증진시키기 위한 동맹을 제안했습니다."
+ japan.1008.a:0 "아시아의 평화다!"
+ japan.1008.b:0 "악마와 동맹을 맺자고?"
+ japan.1009.t:0 "일본이 우리의 인도차이나 식민지를 요구하다"
+ japan.1009.d:0 "일본 정부는 우리의 인도차이나 식민지를 요구했습니다. 어떻게 대응해야 합니까?"
+ japan.1009.a:0 "평화를 위해서라면 어떤 것이든 지불할 수 있다!"
+ japan.1009.b:0 "절대 안 돼!"
+ japan.1010.t:0 "중국이 동맹을 수락하다"
+ japan.1010.d:0 "함께라면 우리는 평화를 지킬 수 있을 것입니다."
+ japan.1010.a:0 "훌륭해."
+ japan.1011.t:0 "중국이 거부하다"
+ japan.1011.d:0 "중국 정부는 우리의 동맹 제의를 거절했습니다."
+ japan.1011.a:0 "안타깝군."
+ japan.1012.t:0 "프랑스가 물러서다"
+ japan.1012.d:0 "프랑스는 우리의 요구에 굴복했습니다. 우리는 지금 인도차이나의 영토에 있습니다."
+ japan.1012.a:0 "달콤한 승리다."
+ japan.1013.t:0 "프랑스가 거부하다"
+ japan.1013.d:0 "프랑스는 식민지를 대가 없이 포기하라는 우리의 요구를 거부했습니다. 우리는 약속을 지키고 선전포고를 해야 합니다."
+ japan.1013.a:0 "그러면 전쟁이다."
 
 
