--- a/localisation/usa_focus_l_english.yml
+++ b/localisation/usa_focus_l_english.yml
@@ -122,7 +122,7 @@
  US_recognize_BAV:0 "바이에른의 권리 지지"
  US_recognize_BAV_desc:0 "바이에른은 주어진 것보다 더 많은 신용을 받을 가치가 있는 미승인국입니다. 그들은 범독일 통일의 명분을 위해 국민을 하나로 뭉쳤습니다. 그들과 관계를 늘리는 것이 가장 나쁜 생각은 아닐지도 모릅니다."
  US_recognize_GER:0 "프로이센 인식 지속"
- US_recognize_GER_Desc:0 "독일 제국 분열이라는 브뤼셀 조약을 유지하기 위해서는 프로이센이 독일 정치를 주도해야 합니다. 우리는 계속해서 그들을 독일의 후계자로 인정해야 합니다."
+ US_recognize_GER_Desc:0 "독일 제국 분열이라는 브뤼셀 조약을 유지하기 위해서는 프로이센이 독일 정치를 주도해야 합니다. 우리는 계속해서 그들을 독일의 후신으로 인정해야 합니다."
  US_lend_lease_act:0 "무기 대여법"
  US_lend_lease_act_desc:0 "무기 대여법을 통과시켜 동맹국들을 도와야 합니다. 대통령은 국무장관을 통해 행정명령을 내려 동맹국들에게 물질적 지원을 보낼 수 있습니다."
  US_war_ENG:0 "전쟁 계획 빨강"
