--- a/localisation/chc_focus_l_english.yml
+++ b/localisation/chc_focus_l_english.yml
@@ -32,91 +32,91 @@
  CHC_north_campaign:0 "황제 타도"
  CHC_north_campaign_desc:0 "우리가 얼마나 오랫동안 이 날을 기다렸습니까. 1923년 위대한 운동을 시작했을 때 우리는 승리를 확신했습니다. 하지만 우리의 자신감은 우리에게 파멸을 가져다 주었습니다. 우리는 강 뒤로 밀려났고 우리의 꿈이 어떻게 산산조각이 났는지 봐야만 했습니다. 그 굴욕은 영원처럼 느껴졌지만 이제 우리는 적을 격파하기 위해, 배신자들을 불태우기 위해, 수세기 동안 중국을 괴롭혔던 저주를 덜어주기 위해, 돌아왔습니다."
  CHC_root_out_communist:0 "오지의 쓰레기들"
- CHC_root_out_communist_desc:0 "We should have been more extreme in 1928. Due to the intervention of other political parties we were never able to completly destroy the Communists at Shangai. This time no one will be stopping us."
+ CHC_root_out_communist_desc:0 "우리는 1928년에 더 극단적이었어야 했습니다. 다른 정당들의 개입으로 우리는 상하이의 공산주의자들을 완전히 파괴할 수 없었습니다. 이번에는 아무도 우리를 막지 않을 것입니다."
  CHC_re_manchu:0 "그들을 쫓아내라"
- CHC_re_manchu_desc:0 "It is time for revenge. We will now finally regain Manchuria and give the Japanese the same humiliation they suffered years ago."
+ CHC_re_manchu_desc:0 "복수할 때입니다. 우리는 이제 마침내 만주를 되찾고 수년 전 일본인들이 겪었던 것과 같은 굴욕을 줄 것입니다."
  CHC_rebuild:0 "공화국 군대 재건"
  CHC_remilitarize_shangai:0 "상하이 재무장"
- CHC_remilitarize_shangai_desc:0 "During our stalement with the Qing Dynasty the League of Nations intervened. Without having any understanding about the conflict and what it means to us they demanded the demilitarization of the Shangai Region, our own capital! The west does not try to support our course they only humiliate us! It is time to reclaim our capital!"
- CHC_rebuild_desc:0 "Our industry and army are in despair.The military factories are suffering strikes.We have to act and rebuild our great country."
+ CHC_remilitarize_shangai_desc:0 "청나라와의 교착 상태 동안 국제연맹이 개입했습니다. 그들은 분쟁과 그것이 우리에게 어떤 의미인지 전혀 이해하지 못한 채 우리의 수도인 상하이 지역의 비무장화를 요구했습니다! 서방은 우리의 진로를 지지하려 하지 않습니다. 그들은 단지 우리를 모욕할 뿐입니다! 우리의 자본을 되찾을 때입니다!"
+ CHC_rebuild_desc:0 "우리 산업과 군대는 절망에 빠져 있습니다. 군수공장들이 파업에 시달리고 있습니다. 우리는 위대한 조국을 재건하고 행동해야 합니다."
  CHC_defence_fond:0 "중국 방벽"
- CHC_defence_fond_desc:0 "Japan is our greatest enemy and seems to be more likely to attack us then ever.Our military is not fully ready for a japanese invasion.We need better ways to improve our defenses so that we can hold off the Japanese."
+ CHC_defence_fond_desc:0 "일본은 우리의 가장 큰 적이고 그 어느 때보다 우리를 공격할 가능성이 더 높은 것 같습니다. 우리 군은 아직 일본의 침략에 대한 준비가 완전히 되어 있지 않습니다. 일본군을 저지할 수 있도록 방위력을 향상시킬 수 있는 더 나은 방법이 필요합니다."
  CHC_defend_JAP:0 "상하이 요새"
- CHC_defend_JAP_desc:0 "Our most populated region must be hold at all cost. Our enemies will never be able to overcome the fortifications of Nanjing, Suzhou, Nantong and Shangai."
+ CHC_defend_JAP_desc:0 "가장 인구가 많은 지역은 어떤 대가를 치르더라도 유지되어야 합니다. 우리의 적들은 난징, 쑤저우, 난퉁, 상하이의 요새를 결코 극복할 수 없을 것입니다."
  CHC_retreat_line:0 "후퇴선"
- CHC_retreat_line_desc:0 "We do not have the strenght to stop the Japanese forever it is clear that we will be pushed back in a case of war.That is why we need to make a retreat line behind the yellow river.With fortifications on that river we maybe be able to stop them."
+ CHC_retreat_line_desc:0 "우리는 일본인들을 영원히 막을 힘이 없습니다. 전쟁이 터질 경우에 우리가 뒤로 밀릴 것이 분명합니다. 그래서 황하 뒤에 후퇴선을 만들어야 합니다. 강에 요새를 설치하면 그들을 막을 수 있을지도 모릅니다."
  CHC_coastal_def:0 "해안 방어"
- CHC_coastal_def_desc:0 "Japan has the strongest navy in Asia.Our small coast navy can not even dream about competing with them.Japan will use this advantage against us and propably attack our cities on the coast.If we want to stand a chance,we have to fortify them. "
+ CHC_coastal_def_desc:0 "일본은 아시아에서 가장 강한 해군을 가지고 있습니다. 우리의 작은 연안해군은 그들과 경쟁할 꿈도 꾸지 못합니다. 일본은 이 이점을 우리에게 적용하여 해안 도시들을 공격할 것입니다. 만약 우리가 기회를 얻으려면, 우리는 해안을 요새화시켜야 합니다."
  CHC_stay_on_course:0 "공화국의 안정성"
- CHC_stay_on_course_desc:0 "The Kuomingtang party is more divided then ever. The left wing clashes with the conservative wing of the party and the military threathens to coup the government if we make to many socialist steps. Only one side can previal in this conflict may it be through words or blood."
+ CHC_stay_on_course_desc:0 "국민당은 그 어느 때보다 더 분열되어 있습니다. 좌파는 우리가 너무 많은 사회주의적 조치를 취하면 정부를 쿠데타하겠다고 위협하는 당의 보수파와 군부와 충돌합니다. 이 분쟁에서 오직 한 쪽만이 대화이나 유혈을 통해 승리할 수 있습니다."
  CHC_commi:0 "공산당 인수"
- CHC_commi_desc:0 "The Kuomintang are a disgrace to China.Their so called democracy is a militaric dictaturship.They let the people suffer from the famines.But the worst thing is that they do not recognize the threat of the Japanese.The communist party of China is the only way to save the nation.We have enough support from the people if we want to rule then we should rule now!"
+ CHC_commi_desc:0 "국민당은 중국의 치욕입니다. 그들이 말하는 소위 민주주의는 군국주의적 독재입니다. 그들은 사람들이 기근으로 고통받도록 내버려 두었습니다. 하지만 가장 나쁜 것은 일본인들의 위협을 인식하지 못한다는 것입니다. 중국 공산당이 나라를 구할 유일한 길입니다. 우리는 사람들로부터 충분한 지지를 받고 있으니, 우리가 통치하고 싶다면 지금 통치해야 합니다!"
  CHC_support_mao:0 "마오 지원"
- CHC_support_mao_desc:0 "During the Warlord Civil War Mao let our communist troops.Mao didn't hide from the Kuomintang like the other communists did,he took up arms when the people needed him!He is the only one in this country who could be called a leader!"
+ CHC_support_mao_desc:0 "군벌 내전 기간 동안 마오는 우리 공산군을 허락했습니다. 마오는 다른 공산주의자들처럼 국민당으로부터 숨지 않았습니다. 인민들이 그를 필요로 할 때 그는 무기를 들고 일어섰습니다! 그는 이 나라에서 지도자라고 불릴 수 있는 유일한 사람입니다!"
  CHC_dictatorship:0 "권위주의 통치"
- CHC_dictatorship_desc:0 "To rule a country of like China you need a strong rule or you will be killed my rebels."
+ CHC_dictatorship_desc:0 "중국과 같은 나라를 통치하기 위해서는 강력한 통치가 필요합니다. 그렇지 않으면 반군에 의해 살해될 것입니다."
  CHC_kill_opposition:0 "반대파 제거"
- CHC_kill_opposition_desc:0 "We are now in control of the main government but the Kuomintang are not fully destroyed.They still have members in the miltary and state governments.The only solution we have right now is killing them before they can form a stable oppisition in our country."
- CHC_reinforce_government:0 "Reinforce Government"
- CHC_reinforce_government_desc:0 "By reinforcing our current communist government we are going to gain more influence."
+ CHC_kill_opposition_desc:0 "우리는 지금 본국 정부를 장악하고 있지만 국민당은 완전히 파괴되지 않았습니다. 그들은 여전히 군인과 주 정부에 소속되어 있습니다. 지금 우리가 가지고 있는 유일한 해결책은 그들이 우리나라에서 안정적인 지배권을 형성하기 전에 죽이는 것입니다."
+ CHC_reinforce_government:0 "정부 강화"
+ CHC_reinforce_government_desc:0 "현재의 공산주의 정부를 강화함으로써 우리는 더 많은 영향력을 얻을 것입니다."
  CHC_social_demo:0 "사회주의의 민주주의"
- CHC_social_demo_desc:0 "Our country suffered under dictaturships and monarchies for centuries.To gain more support from our people we should go down a way of freedom rather then full controll."
+ CHC_social_demo_desc:0 "우리나라는 수 세기 동안 독재와 군주제 하에서 고통받았습니다. 우리 국민들로부터 더 많은 지지를 얻기 위해서는 완전한 통제보다는 자유의 길을 가야 합니다."
  CHC_agarian_policy:0 "농업 정책 개혁"
- CHC_agarian_policy_desc:0 "In the last years China has been suffering under famines due to the civil war and the incompetence of the Kuomingtang government.With new reforms in the agarian industry the people of China are finally going to get enough food to live and work."
+ CHC_agarian_policy_desc:0 "지난 몇 년 동안 중국은 내전과 국민당 정부의 무능으로 인해 기근에 시달려왔습니다. 농업의 새로운 개혁으로 중국 국민들은 마침내 먹고 살 수 있는 충분한 식량을 얻게 될 것입니다."
  CHC_demand_maccau:0 "마카오"
- CHC_demand_maccau_desc:0 "Maccau has been a Portuguese port over almost 400 years.And our country never intended to took it back after the disgrace of the opium wars.We sent the Portuguese a ultimatum:Give up Macau or we invade!"
+ CHC_demand_maccau_desc:0 "마카오는 거의 400년 동안 포르투갈의 항구였습니다. 그리고 우리나라는 아편전쟁의 치욕 이후 결코 그것을 되찾을 생각이 없었습니다. 포르투갈에 최후통첩을 보냈습니다: 마카오를 포기하지 않으면 침공할 것이다!"
  CHC_demand_hong_kong:0 "홍콩"
- CHC_demand_hong_kong_desc:0 "Hong Kong is a island in the south of China occupied by Britain.It was given to them after their victory in the Opium wars.China should have attacked the island years ago!The British have no way to threaten us in these times!"
+ CHC_demand_hong_kong_desc:0 "홍콩은 영국이 점령한 중국 남부의 섬입니다. 그것은 아편전쟁에서 승리한 후 그들에게 주어졌습니다. 중국은 수년 전에 이 섬을 공격했어야 했습니다! 영국인들은 이런 시기에 우리를 위협할 방법이 없습니다!"
  CHC_destribute_land:0 "토지 분배"
- CHC_destribute_land_desc:0 "By destributing the lands of our country to farmers we are going to have better organisation in our agarian industry,"
+ CHC_destribute_land_desc:0 "우리나라의 토지를 농부들에게 분배함으로써 우리는 농업 분야에서 더 나은 조직을 갖게 될 것입니다."
  CHC_proclaim_peoples:0 "인민의 신뢰"
- CHC_proclaim_peoples_desc:0 "Our communist government has a lot of popularity under the people but we don't have the trust of all people.With new political campaigns and celebrations we are going to earn their trust."
+ CHC_proclaim_peoples_desc:0 "우리 공산주의 정부는 국민 아래에서 많은 인기를 얻고 있지만 모든 국민의 신뢰를 얻지 못하고 있습니다. 새로운 정치 운동과 축하 행사를 통해 우리는 그들의 신뢰를 얻을 것입니다."
  CHC_world_revolution:0 "세계혁명"
- CHC_world_revolution_desc:0 "While our country is prospers a lot under glorius communism, people in other countries are being enslaved by democraties and dictaturships.It's our duty to free those people!"
+ CHC_world_revolution_desc:0 "우리나라가 영광스러운 공산주의 체제하에서 많은 번영을 누리고 있는 반면, 다른 나라 사람들은 민주주의와 독재의 노예가 되고 있습니다. 저 사람들을 해방시키는 것이 우리의 의무입니다!"
  CHC_isolisianism:0 "고립"
- CHC_isolisianism_desc:0 "Communism is not popular in this world.If we start attacking other countries, more will communism as a threat.We have to stay isolated to save communism."
+ CHC_isolisianism_desc:0 "공산주의는 이 세상에서 인기가 없습니다. 만약 우리가 다른 나라들을 공격하기 시작한다면, 더 많은 이들이 공산주의가 위협으로 여길 것입니다. 우리는 공산주의를 구하기 위해 고립되어 있어야 합니다."
  CHC_quest_agaisnt_demo:0 "서벌"
- CHC_quest_agaisnt_demo_desc:0 "Britian,France,the USA.They all betrayed their people!In the great war those countries sent millions of innocent men into death to archieve world peace.But what did they archieve? Nothing! It's time to stop this madness!"
+ CHC_quest_agaisnt_demo_desc:0 "영국, 프랑스, 미국. 그들은 모두 자기 국민들을 배신했습니다! 그 나라들은 세계 평화를 위해 수백만 명의 무고한 사람들을 죽음으로 몰아넣었습니다. 하지만 그들은 무엇을 얻었습니까? 아무것도 얻은 게 없습니다! 이제 이 광기를 멈춰야 할 때입니다!"
  CHC_war_preparation_program:0 "전쟁 준비"
- CHC_war_preparation_program_desc:0 "We have to prepeare for war.The Japanese occupy our lands and threaten to invade us.The Russians occupied Sinkiang and tried to use us."
+ CHC_war_preparation_program_desc:0 "우리는 전쟁을 준비해야 합니다. 일본인들이 우리 땅을 점령하고 침략하겠다고 위협합니다. 러시아인들이 신장을 점령하고 우리를 이용하려 했습니다."
  CHC_against_JAP:0 "대적 살해"
- CHC_against_JAP_desc:0 "Japan is the true enemy of China.They stole us Manchukuo and Korea and threaten to occupy our last sea ports.We have get revenge for all the lost wars in the last century!"
+ CHC_against_JAP_desc:0 "일본은 중국의 진정한 적입니다. 그들은 우리의 만주국과 한국을 빼앗았고 우리의 마지막 항구를 점령하겠다고 위협했습니다. 우리는 지난 세기의 모든 잃어버린 전쟁에 대한 복수를 해야 합니다!"
  CHC_claim_TAI:0 "타이완"
- CHC_claim_TAI_desc:0 "After the Great War Japan occupied Taiwan for a military base.The Entene was our ally but betrayed us by saying Japan was allowed to keep Taiwan.It's time to get our island back!"
+ CHC_claim_TAI_desc:0 "세계 대전 후에 일본은 군사기지를 위해 대만을 점령했습니다. 협상국은 우리의 동맹이었지만 일본이 대만을 지킬 수 있도록 허락받았다고 말하며 우리를 배신했습니다. 우리 섬을 되찾을 시간입니다!"
  CHC_claim_MAN:0 "만주국"
- CHC_claim_MAN_desc:0 "Japan has installed a puppet state in the region of Manchukuo"
+ CHC_claim_MAN_desc:0 "일본은 만주국에 괴뢰국을 수립했습니다."
  CHC_demand_referendum_MAN:0 "국경 분쟁"
- CHC_demand_referendum_MAN_desc:0 "In the last two years there have been many border clashes on our Manchurian border between Japanese and our troops.It's time that Japan pays!Either they give up the border regions of Manchukuo as reperations or we are going to declare war."
+ CHC_demand_referendum_MAN_desc:0 "지난 2년 동안 우리 만주 국경에서 일본군과 국군 사이에 많은 국경 충돌이 있었습니다. 일본이 대가를 치룰 때입니다! 그들이 만주국의 국경 지역을 배상으로 포기하지 않으면 우리는 전쟁을 선포할 것입니다."
  CHC_war_JAP:0 "일본 공격"
- CHC_war_JAP_desc:0 "Japan occupied Chinese lands now for many years.We have to attack Japan now before the destroy the Chinese culture in those regions."
+ CHC_war_JAP_desc:0 "일본은 지금 몇 년 동안 중국 땅을 점령했습니다. 우리는 지금 일본을 공격해야 합니다. 그 지역의 중국 문화를 파괴하기 전에 말입니다."
  CHC_glory:0 "영광스러운 승리"
- CHC_glory_desc:0 "The message of the glory with obtained through our victories in the war will help us gaining more support in the population."
+ CHC_glory_desc:0 "전쟁에서의 승리를 통해 얻은 영광의 교훈은 우리가 국민들에게서 더 많은 지지를 얻는 데 도움이 될 것입니다."
  CHC_war_TIB:0 "티베트"
- CHC_war_TIB_desc:0 "With the great powers beaten we can finally conquer the rebels in the far west of China."
+ CHC_war_TIB_desc:0 "강대국이 패배함으로써 우리는 마침내 중국 서쪽 끝의 반군을 정복할 수 있습니다."
  CHC_war_RUS:0 "러시아와의 전쟁"
- CHC_war_RUS_desc:0 "Russia tried to ally us in the last years,but all this was for their own goals.They never helped us when Japan took Manchuria and they still occupy Sinkiang.Those bastards want us to be their puppet.We will destroy them."
+ CHC_war_RUS_desc:0 "러시아는 지난 몇 년 동안 우리와 동맹을 맺으려고 했지만, 이 모든 것은 그들 자신의 목적을 위한 것입니다. 그들은 일본이 만주를 점령할 때 결코 우리를 도와주지 않았고 지금도 신장을 점령하고 있습니다. 저 개자식들은 우리가 그들의 꼭두각시가 되길 원합니다. 우리는 그들을 파괴할 것입니다."
  CHC_war_SIK:0 "신장 파괴"
- CHC_war_SIK_desc:0 "It's time to attack those damn traitors in the northwest.No one disrespects us without consequences!"
+ CHC_war_SIK_desc:0 "북서쪽에 있는 저 망할 반역자들을 공격할 때입니다. 아무도 결과 없이 우리를 무시하지 않습니다!"
  RUS_claim_MON:0 "몽골 요구"
- RUS_claim_MON_desc:0 "Before our civil war against the monarchy Mongolia was an part of our country but they used the dissaray to break free.Since then Mongolia has been under Russian control.It's time to manifest our claims in this region again."
+ RUS_claim_MON_desc:0 "왕정에 대항한 내전이 일어나기 전에는 몽골은 우리나라의 일부였지만 그들은 해방되기 위해 반란을 이용했습니다. 그 이후로 몽골은 러시아의 통제를 받고 있습니다. 이제 이 지역에서 우리의 권리를 다시 한 번 표명할 때입니다."
  CHC_claim_vladivostok:0 "동방 요구"
- CHC_claim_vladivostok_desc:0 "The harbours of Vladivostok once belonged to us.But when the opium wars where over the Russian were just given those territories without being involved in the war!Those regions may not contain any chinese anymore but we will still manifest our claims."
+ CHC_claim_vladivostok_desc:0 "블라디보스토크의 항구는 한때 우리 소유였습니다. 하지만 아편전쟁이 일어났을 때 러시아는 참전하지도 않고 단지 그 영토를 받았습니다! 그 지역들은 더 이상 중국인들이 살고 있지 않을 수도 있지만 우리는 여전히 우리의 권리를 표명할 것입니다."
  CHC_against_RUS:0 "북쪽의 적"
- CHC_against_RUS_desc:0 "Our enemy we should focus on is not in the east but in the north.The Russian Empire wants us as their puppet and we have to protect against this threat."
+ CHC_against_RUS_desc:0 "우리가 집중해야 할 우리의 적은 동쪽이 아니라 북쪽입니다. 러시아 제국은 우리를 그들의 꼭두각시로 원하고 우리는 이 위협으로부터 보호해야 합니다."
  CHC_liberation_forces:0 "인민해방군"
- CHC_liberation_forces_desc:0 "With new special forces we are going to enhance our army greatly."
+ CHC_liberation_forces_desc:0 "우리는 새로운 특수부대로 우리 군대를 크게 증강시킬 것입니다."
  CHC_united:0 "중국 통일"
- CHC_united_desc:0 "It's time to unite this country.The government is still split between warlords and communists and the famines are plagueing the country.We need to unite now or this nation will die."
+ CHC_united_desc:0 "이제 이 나라를 통일할 때입니다. 정부는 여전히 군벌과 공산주의자로 분열되어 있고 기근은 나라를 괴롭히고 있습니다. 우리는 지금 단결해야 합니다. 그렇지 않으면 이 나라는 멸망할 것입니다."
  CHC_ally_war_lords:0 "군벌과의 동맹"
- CHC_ally_war_lords_desc:0 "After the civil war the war lords were beaten but many of them are still in power of some states.It's time to settle our differences and construct a new government together."
+ CHC_ally_war_lords_desc:0 "내전 후 군벌들은 패배했지만 그들 중 많은 수가 여전히 일부 주의 권력을 쥐고 있습니다. 이제 우리의 차이점들을 해소하고 함께 새 정부를 건설할 때입니다."
  CHC_new_government:0 "신정부"
- CHC_new_government_desc:0 "by reforming our government and building a stable government cabinet our government will be finally united.Chiang Kay-Shek will rule this government with emergency powers until the Japanese threat is destroyed."
+ CHC_new_government_desc:0 "우리 정부를 개혁하고 안정적인 정부 내각을 구축함으로써 우리 정부는 마침내 하나가 될 것입니다. 장제스는 일본의 위협이 파괴될 때까지 비상권력으로 이 정부를 통치할 것입니다."
  CHC_restore_monarchy:0 "청 왕조 복고"
- CHC_restore_monarchy_desc:0 "It's time to unite the people of China.But not with another authorian leadership we need our emporer back!It's time give him back his empire!"
+ CHC_restore_monarchy_desc:0 "중국 인민을 단결시킬 때입니다. 하지만 또 다른 권위주의적인 지도자가 아니라, 우리는 우리의 황제를 다시 데려와야 합니다! 이제 황제 폐하께 제국을 되찾아 드릴 때입니다!"
  CHC_eliminate_commi:0 "공산주의 위협 파괴"
- CHC_eliminate_commi_desc:0 "Many people of our country are still supporting those treacherous communist.It's time to crack down their socialist morale!"
+ CHC_eliminate_commi_desc:0 "우리나라의 많은 사람들은 여전히 그 배반적인 공산주의자를 지지하고 있습니다. 이제 그들의 사회주의 사기를 단속할 때입니다!"
  CHC_secret_police:0 "비밀경찰"
- CHC_secret_police_desc:0 "With secret police forces we are going to have less issues tracking down rebels in enemy territory and finding communist supportetrs"
+ CHC_secret_police_desc:0 "비밀경찰로 적 지역의 반군을 추적하고 공산당의 지지자를 찾는 문제를 줄일 수 있을 것입니다."
  CHC_fight_the_famines:0 "기근과의 싸움"
  CHC_fight_the_famines_desc:0 "Now that we have finally solved our famine issues we can finally concentrate our attention to stopping the famines."
  CHC_foreign_investments:0 "외국 투자"
